# avion

./: .gitignore  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libs/: libavion-darwin.dylib  libavion.dylib
native/: CMakeLists.txt
native/avion/: audio_buffer.hpp  avion.cpp  avion.hpp  avion.mm  avion_avfoundation.hpp  avion_avfoundation.mm  avion_ffmpeg.hpp  avion_jni.cpp  avion_jni.mm  avion_mediafoundation.hpp  ch_fhnw_ether_avion_Avion.h  util.hpp
native/avion.xcodeproj/: project.pbxproj
native/avion.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
native/avion.xcodeproj/project.xcworkspace/xcuserdata/radar.xcuserdatad/: UserInterfaceState.xcuserstate
native/avion.xcodeproj/xcuserdata/radar.xcuserdatad/xcschemes/: avion.xcscheme  avion_test.xcscheme  xcschememanagement.plist
native/avion_test/: avion_test.cpp  avion_test.mm
src/main/java/ch/fhnw/ether/avion/: AVDecoder.java  AVEncoder.java  Avion.java  NativeLoader.java
src/main/java/ch/fhnw/ether/avion/example/: AvionDecoderTest.java  AvionPlayer.java
src/test/java/ch/fhnw/ether/avion/test/: AvionDecoderTest.java  AvionPlayer.java
